--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate:client": "npx @openapitools/openapi-generator-cli generate -g typescript-axios --additional-properties npmName=todo-list-client -i http://localhost:3000/api-docs/json -o ./api-client"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
